--- a/simple-walkthroughs/RegExp.prototype.compile.html
+++ b/simple-walkthroughs/RegExp.prototype.compile.html
@@ -70,9 +70,9 @@ console.log('123XYZ456'.match(re));</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
 
-    <script src="https://cdn.rawgit.com/jmcriffey/bower-traceur/0.0.72/traceur.js"></script>
-    <script src="https://cdn.rawgit.com/ModuleLoader/es6-module-loader/v0.9.4/dist/es6-module-loader.js"></script>
-    <script src="https://cdn.rawgit.com/systemjs/systemjs/0.9.3/dist/system.js"></script>
+    <script src="https://cdn.rawgit.com/jmcriffey/bower-traceur/0.0.74/traceur.min.js"></script>
+    <script src="https://cdn.rawgit.com/ModuleLoader/es6-module-loader/v0.10.0/dist/es6-module-loader.js"></script>
+    <script src="https://cdn.rawgit.com/systemjs/systemjs/0.10.1/dist/system.js"></script>
     <script src="../assets/simple-walkthrough.system.config.js"></script>
 
     <script type="application/javascript;version=1.7" src="../assets/repl.js"></script>
